--- a/stl/stl.html
+++ b/stl/stl.html
@@ -113,16 +113,16 @@
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT ME</h3>
         <p class="w3-center"><em>I Wanna Make A Difference.</em></p>
-        <p>I think on some level, we all want to make a difference. We want people to look back on us after we're gone and say, "Wow. They were amazing." That looks different for all of us I think. For some of us, it might be becoming famous. For others, inventing a new car, or building a new phone. And yet for others, it might be as simple as smiling at the neighbor, or buying a coffee for the person behind you at Starbucks. For me, I want to spread the love of Jesus, and I'm trying to do this through Speed the Light.</p>
+        <p>I think on some level, we all want to make a difference. We want people to look back on us after we're gone and say, "Wow. They were amazing." That looks different for all of us I think. For some of us, it might be becoming famous. For others, inventing a new car, or building a new phone. And yet for others, it might be as simple as smiling at the neighbor, or buying a coffee for the person behind you at Starbucks. For me, I want to spread the love of Jesus, and I'm trying to do this through Speed the Light. Speed the Light is a Christian organization that takes donations from youth in the United States, and then sends them to buy Bibles for people who don't have access to one in other countries, to buy sound systems and cars for missionaries, and to rescue people from modern day slavery, and sex trafficking, both of which still exist.</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <p><b><i class="fa fa-user w3-margin-right"></i>Tovin Sannes-Venhuizen</b></p><br>
+                <p><b><i class="fa fa-user w3-margin-right"></i>Tovin Sannes-Venhuizen</b>I'm a 15 year old (almost 16!) from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! I'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p><br>
                 <img src="images/me.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
             </div>
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>Speed the Light is a Christian organization that takes donations from youth in the United States, and then sends them to buy Bibles for people who don't have access to one in other countries, to buy sound systems and cars for missionaries, and to rescue people from modern day slavery, and sex trafficking, both of which still exist.</p>
+                <p></p>
             </div>
         </div>
         <p class="w3-large w3-center w3-padding-16">My Goal for 2018:</p>
