--- a/stl/stl.html
+++ b/stl/stl.html
@@ -113,7 +113,7 @@
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT ME</h3>
         <p class="w3-center"><em>I Wanna Make A Difference.</em></p>
-        <p>I think on some level, we all want to make a difference. We want people to look back on us after we're gone and say, "Wow. They were amazing." That looks different for all of us I think. For some of us, it might be becoming famous. For others, inventing a new car, or building a new phone. And yet for others, it might be as simple as smiling at the neighbor, or buying a coffee for the person behind you at Starbucks. For me, I want to spread the love of Jesus, and I'm trying to do this through Speed the Light. Speed the Light is a Christian organization that takes donations from youth in the United States, and then sends them to buy Bibles for people who don't have access to one in other countries, to buy sound systems and cars for missionaries, and to rescue people from modern day slavery, and sex trafficking, both of which still exist.</p>
+        <p>I think on some level, we all want to make a difference. We want people to look back on us after we're gone and say, "Wow. They were amazing." What we have to do to have people say that, is different for all of us. For some of us, it might be becoming famous. For others, inventing a new car, or building a new phone. And yet for others, it might be as simple as smiling at our neighbor, or buying a coffee for the person behind you at Starbucks. For me, I want to spread the love of Jesus, and I'm trying to do this through <a href="https://youth.ag.org/participate/speed-the-light">Speed the Light</a>. Speed the Light is a Christian organization that takes donations from youth in the United States, and then sends them to buy Bibles for people who don't have access to one in other countries, to buy sound systems and transportation (Airplanes, cars, vans, motorcycles, bicycles, trucks, buses, boats, horses, camels, donkeys, wheel barrows, etc...) for missionaries, and to rescue people from modern day slavery, and sex trafficking, both of which still exist.</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Tovin Sannes-Venhuizen</b></p><br>
@@ -122,7 +122,7 @@
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>I'm a 15 year old (almost 16!) from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! I'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
+                <p>I'm a 15 year old (almost 16!) guy from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! It'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
             </div>
         </div>
         <p class="w3-large w3-center w3-padding-16">My Goal for 2018:</p>
@@ -154,14 +154,7 @@
             <br>
             <br>
 
-            <!-- Modal for full size images on click-->
-            <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-                <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-                <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-                    <img id="img01" class="w3-image">
-                    <p id="caption" class="w3-opacity w3-large"></p>
-                </div>
-            </div>
+
 
             <!-- Third Parallax Image with Portfolio Text -->
             <div class="bgimg-3 w3-display-container w3-opacity-min">
