--- a/stl/index.html
+++ b/stl/index.html
@@ -149,7 +149,7 @@
       the world a better place.<br> Note that donations may take a few days to register on progress bar.</em></p><br>
 
 
-            <a href="https://paypal.me/Tovin"><img src="images/donate.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"></a>
+            <a href="continue.html"><img src="images/donate.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"></a>
 
             <br>
             <br>
