--- a/stl/popup2.html
+++ b/stl/popup2.html
@@ -73,7 +73,7 @@
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">DONATE</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
-            <p class="w3-large w3-center">I'm raising money for Speed the Light, and until April 4th, donations up to $500 are being matched!</p><button class="button" onclick="window.location.href='index.html'" target="_blank">Learn More</button>
+            <p class="w3-large w3-center">I'm raising money for Speed the Light, and until April 4th, donations up to $500 are being matched!</p>Learn more at <a href="index.html" target="_top">tjsanzen.net/stl</a>
         </div>
         <div class="w3-display-bottomleft w3-padding-large">
             Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
