--- a/stl/index.html
+++ b/stl/index.html
@@ -3,6 +3,7 @@
 <title>Help Tovin Speed the Light</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:image" content="images/donations.png" />
 <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
