--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="panel spotlight medium right" id="first">
                 <div class="content span-7">
                     <h2 class="major">Photography</h2>
-                    <p>I've been a hobby photographer since 2015, working on focusing my skills, and praying that I'll be able to use my talent for God. I've had my photographs featured in many places, including Facebook pages, Websites, books, in video games, and on Google Maps!</p>
+                    <p>I've been a hobby photographer since 2015, working on focusing my skills, and praying that I'll be able to use my talent for God. I've had my photographs featured in many places, including Facebook pages, Websites, books, in video games, and on Google Maps! I am available to do photoshoots, and have done engagement photos before! </p>
                 </div>
                 <div class="image filtered tinted" data-position="top left">
                     <img src="images/pic02.jpg" alt="" />
