--- a/stl/popup.html
+++ b/stl/popup.html
@@ -34,7 +34,7 @@
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">NOTICE</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
-            <p class="w3-large w3-center">Until April 4th, all donations of up to $500 are being matched!</p>
+            <p class="w3-large w3-center">Donations are no longer being matched, but it's not too late to donate! Every time you donate, you give someone the chance to personally know Jesus.</p>
         </div>
         <div class="w3-display-bottomleft w3-padding-large">
             Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
