--- a/stl/popup.html
+++ b/stl/popup.html
@@ -32,7 +32,7 @@
             STL
         </div>
         <div class="w3-display-middle">
-            <h1 class="w3-jumbo w3-animate-top">Rally Video</h1>
+            <h1 class="w3-jumbo w3-animate-top">Donate</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
             <p class="w3-large w3-center">Donations are no longer being matched, but it's not too late to donate! Every time you donate, you give someone the chance to personally know Jesus.</p>
         </div>
