--- a/index.html
+++ b/index.html
@@ -157,14 +157,16 @@
 
     </div>
 
-    <!-- Scripts -->
+
+
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/main.js"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
-    <script>
+    <!-- Popup box    <script>
         function openColorBox() {
             $.colorbox({
                 iframe: true,
@@ -176,7 +178,9 @@
 
         setTimeout(openColorBox, 5000);
 
-    </script>
+
+
+    </script> -->
 
 </body>
 
