--- a/stl/index.html
+++ b/stl/index.html
@@ -329,7 +329,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
-            <script>
+            <!--      <script>
                 function openColorBox() {
                     $.colorbox({
                         iframe: true,
@@ -341,7 +341,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
                 setTimeout(openColorBox, 5000);
 
-            </script>
+            </script> -->
 
 </body>
 
