--- a/shop/shop.html
+++ b/shop/shop.html
@@ -56,35 +56,25 @@
         <!-- Photo grid -->
         <div class="w3-row">
             <div class="w3-third">
-                <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-                <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-                <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
+                <img src="images/products/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
+                <img src="images/products/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
             </div>
 
             <div class="w3-third">
-                <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-                <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-                <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+                <img src="images/products/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+                <img src="images/products/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
+                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
             </div>
 
             <div class="w3-third">
-                <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-                <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-                <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+                <img src="images/products/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+                <img src="images/products/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+                <img src="images/products/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
             </div>
         </div>
 
-        <!-- Pagination -->
-        <div class="w3-center w3-padding-32">
-            <div class="w3-bar">
-                <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-                <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-                <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-                <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-                <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
-                <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
-            </div>
-        </div>
+
 
         <!-- Modal for full size images on click-->
         <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
@@ -97,76 +87,27 @@
 
         <!-- About section -->
         <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-            <h4><b>About Me</b></h4>
-            <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+            <h4><b>About Us</b></h4>
+            <img src="images/products/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
             <div class="w3-content w3-justify" style="max-width:600px">
-                <h4>My Name</h4>
-                <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <h4>Tovin & Janessa</h4>
+                <p>In May of 2018, we had a sudden realization. The world needed more good clothes. So we took it upon ourselves to try and create a shop with clothing that is a good representation of you.
                 </p>
-                <p>mail: example@example.com</p>
-                <p>tel: 5353 35531</p>
-                <hr class="w3-opacity">
-                <h4 class="w3-padding-16">Technical Skills</h4>
-                <p class="w3-wide">Photography</p>
-                <div class="w3-white">
-                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
-                </div>
-                <p class="w3-wide">Web Design</p>
-                <div class="w3-white">
-                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
-                </div>
-                <p class="w3-wide">Photoshop</p>
-                <div class="w3-white">
-                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
-                </div>
-                <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+                <p>mail: business@tjsanzen.net</p>
+                <p>tel: 218 841 5586</p>
                 <hr class="w3-opacity">
 
-                <h4 class="w3-padding-16">How much I charge</h4>
-                <div class="w3-row-padding" style="margin:0 -16px">
-                    <div class="w3-half w3-margin-bottom">
-                        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-                            <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-                            <li class="w3-padding-16">Web Design</li>
-                            <li class="w3-padding-16">Photography</li>
-                            <li class="w3-padding-16">5GB Storage</li>
-                            <li class="w3-padding-16">Mail Support</li>
-                            <li class="w3-padding-16">
-                                <h2>$ 10</h2>
-                                <span class="w3-opacity">per month</span>
-                            </li>
-                            <li class="w3-light-grey w3-padding-24">
-                                <button class="w3-button w3-white w3-padding-large">Sign Up</button>
-                            </li>
-                        </ul>
-                    </div>
 
-                    <div class="w3-half">
-                        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-                            <li class="w3-black w3-xlarge w3-padding-32">Pro</li>
-                            <li class="w3-padding-16">Web Design</li>
-                            <li class="w3-padding-16">Photography</li>
-                            <li class="w3-padding-16">50GB Storage</li>
-                            <li class="w3-padding-16">Endless Support</li>
-                            <li class="w3-padding-16">
-                                <h2>$ 25</h2>
-                                <span class="w3-opacity">per month</span>
-                            </li>
-                            <li class="w3-light-grey w3-padding-24">
-                                <button class="w3-button w3-white w3-padding-large">Sign Up</button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
             </div>
         </div>
 
         <!-- Contact section -->
         <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
             <div class="w3-content" style="max-width:600px">
-                <h4 class="w3-center"><b>Contact Me</b></h4>
-                <p>Do you want me to photograph you? Fill out the form and fill me in with the details :) I love meeting new people!</p>
-                <form action="/action_page.php" target="_blank">
+                <h4 class="w3-center"><b>Contact Us</b></h4>
+                <p>Got questions? Something you want that you don't see here? Just drop us a line!</p>
+                <form method="post" action="https://formspree.io/business@tjsanzen.net">
                     <div class="w3-section">
                         <label>Name</label>
                         <input class="w3-input w3-border" type="text" name="Name" required>
@@ -187,41 +128,18 @@
         <!-- Footer -->
         <footer class="w3-container w3-padding-32 w3-grey">
             <div class="w3-row-padding">
-                <div class="w3-third">
+                <div class="w3-center">
                     <h3>INFO</h3>
-                    <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+                    <p>All transactions are processed through PayPal and MiPic. We are not liable for any damage that may happen to you or your property. If you have more questions or concerns, please contact us.</p>
                 </div>
 
-                <div class="w3-third">
-                    <h3>BLOG POSTS</h3>
-                    <ul class="w3-ul">
-                        <li class="w3-padding-16 w3-hover-black">
-                            <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Lorem</span><br>
-                            <span>Sed mattis nunc</span>
-                        </li>
-                        <li class="w3-padding-16 w3-hover-black">
-                            <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-                            <span class="w3-large">Ipsum</span><br>
-                            <span>Praes tinci sed</span>
-                        </li>
-                    </ul>
-                </div>
 
-                <div class="w3-third">
-                    <h3>POPULAR TAGS</h3>
-                    <p>
-                        <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">London</span>
-                        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">DIY</span>
-                        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Family</span>
-                        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Shopping</span>
-                        <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom">Games</span>
-                    </p>
-                </div>
+
+
             </div>
         </footer>
 
-        <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+        <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>, <a href="https://github.com">Github</a>, and <a href="http://tjsanzen.net"></a></div>
 
         <!-- End page content -->
     </div>
