--- a/shop/shop.html
+++ b/shop/shop.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>INSPIRE CLOTHING</title>
+<title>INSPYRE CLOTHING</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 <style>
     body,
     h1,
@@ -31,7 +32,7 @@
 
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-        <h3 class="w3-padding-64 w3-center"><b>INSPIRE<br>CLOTHING</b></h3>
+        <h3 class="w3-padding-64 w3-center"><b>INSPYRE<br>CLOTHING</b></h3>
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
         <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">SHOP</a>
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT US</a>
@@ -40,7 +41,7 @@
 
     <!-- Top menu on small screens -->
     <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-        <span class="w3-left w3-padding">INSPIRE CLOTHING</span>
+        <span class="w3-left w3-padding">INSPYRE CLOTHING</span>
         <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
     </header>
 
@@ -90,8 +91,8 @@
             <h4><b>About Us</b></h4>
             <img src="images/products/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
             <div class="w3-content w3-justify" style="max-width:600px">
-                <h4>Tovin & Janessa</h4>
-                <p>In May of 2018, we had a sudden realization. The world needed more good clothes. So we took it upon ourselves to try and create a shop with clothing that is a good representation of you.
+                <h4>INSPYRE CLOTHING</h4>
+                <p>In this time of our world, we need as much positivity as we can get. Everywhere we look, people are trying to drag us down, showing us what's wrong with the world, without time for as little as even a smile. That's why our goal is to make affordable clothing that inspires people to be the best they can, to live their best life, and to love with their whole life.
                 </p>
                 <p>mail: business@tjsanzen.net</p>
                 <p>tel: 218 841 5586</p>
@@ -139,7 +140,7 @@
             </div>
         </footer>
 
-        <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>, <a href="https://github.com">Github</a>, and <a href="http://tjsanzen.net"></a></div>
+        <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>, <a href="https://github.com">Github</a>, and <a href="http://tjsanzen.net">Tovin</a></div>
 
         <!-- End page content -->
     </div>
