--- a/shop/index.html
+++ b/shop/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>INSPIRE CLOTHING</title>
+<title>INSPYRE CLOTHING</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.png' />
 <style>
     body,
     h1,
@@ -43,7 +44,7 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-card" id="myNavbar">
-            <a href="#home" class="w3-bar-item w3-button w3-wide">INSPIRE CLOTHING</a>
+            <a href="#home" class="w3-bar-item w3-button w3-wide">INSPYRE CLOTHING</a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
                 <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
@@ -65,8 +66,8 @@
     <!-- Header with full-height image -->
     <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
         <div class="w3-display-left w3-text-white" style="padding:48px">
-            <span class="w3-jumbo w3-hide-small">Swag that represents you</span><br>
-            <span class="w3-xxlarge w3-hide-large w3-hide-medium">Swag that represents you</span><br>
+            <span class="w3-jumbo w3-hide-small">Clothing that represents you</span><br>
+            <span class="w3-xxlarge w3-hide-large w3-hide-medium">Clothing that represents you</span><br>
             <span class="w3-large">Coming 07.01.2018</span>
             <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Get Notified</a></p>
         </div>
