--- a/shop/shop.html
+++ b/shop/shop.html
@@ -57,15 +57,15 @@
         <!-- Photo grid -->
         <div class="w3-row">
             <div class="w3-third">
-                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
+                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Black - $35">
                 <img src="images/products/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
                 <img src="images/products/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
             </div>
 
             <div class="w3-third">
-                <img src="images/products/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+                <img src="images/products/boy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Pastel Red - $35">
                 <img src="images/products/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Black - $35">
             </div>
 
             <div class="w3-third">
