--- a/shop/shop.html
+++ b/shop/shop.html
@@ -58,18 +58,18 @@
         <div class="w3-row">
             <div class="w3-third">
                 <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Black - $35">
-                <img src="images/products/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
+                <img src="images/products/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="{ You're Beautiful Tee } - Pastel Pink - $35">
                 <img src="images/products/girl.jpg" style="width:100%" onclick="onClick(this)" alt="{ Shout it Out Tee } - Black - $35">
             </div>
 
             <div class="w3-third">
                 <img src="images/products/boy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Pastel Red - $35">
                 <img src="images/products/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="{ Yesterday, Today, Forever Tee } - Green - $35">
-                <img src="images/products/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="{ So Will I Tee } - Black - $35">
+                <img src="images/products/be_kind.jpg" style="width:100%" onclick="onClick(this)" alt="{ Be Kind Tee } - Grey - $35">
             </div>
 
             <div class="w3-third">
-                <img src="images/products/girl.jpg" style="width:100%" onclick="onClick(this)" alt="{ Shout it Out Tee } - Black - $35">
+                <img src="images/products/love.jpg" style="width:100%" onclick="onClick(this)" alt="{ Love Tee } - Blue - $35">
                 <img src="images/products/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="{ Jesus Freak Tee } - White - $35">
                 <img src="images/products/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="{ Be the Reason Tee } - Black - $35">
             </div>
