--- a/shop/index.html
+++ b/shop/index.html
@@ -86,7 +86,7 @@
         <div class="w3-row-padding" style="margin-top:64px">
             <div class="w3-center">
                 <form method="post" action="https://formspree.io/business@tjsanzen.net">
-                    <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
+                    <p><input class="w3-input w3-border" type="text" placeholder="Email or Phone" required name="Email"></p>
                     <p>
                         <button class="w3-button w3-black" type="submit">
             <i class="fa fa-paper-plane"></i> GET NOTIFIED
