--- a/shop/shop.html
+++ b/shop/shop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>INSPYRE CLOTHING</title>
+<title>TJSANZEN CLOTHING</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -32,7 +32,7 @@
 
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-        <h3 class="w3-padding-64 w3-center"><b>INSPYRE<br>CLOTHING</b></h3>
+        <h3 class="w3-padding-64 w3-center"><b>TJSANZEN<br>CLOTHING</b></h3>
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
         <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">SHOP</a>
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT US</a>
@@ -41,7 +41,7 @@
 
     <!-- Top menu on small screens -->
     <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-        <span class="w3-left w3-padding">INSPYRE CLOTHING</span>
+        <span class="w3-left w3-padding">TJSANZEN CLOTHING</span>
         <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
     </header>
 
@@ -112,7 +112,7 @@
             <h4><b>About Us</b></h4>
             <img src="images/products/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
             <div class="w3-content w3-justify" style="max-width:600px">
-                <h4>INSPYRE CLOTHING</h4>
+                <h4>TJSANZEN CLOTHING</h4>
                 <p>In this time of our world, we need as much positivity as we can get. Everywhere we look, people are trying to drag us down, showing us what's wrong with the world, without time for as little as even a smile. That's why our goal is to make affordable clothing that inspires people to be the best they can, to live their best life, and to love with their whole life.
                 </p>
                 <p>mail: business@tjsanzen.net</p>
