--- a/shop/index.html
+++ b/shop/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>INSPYRE CLOTHING</title>
+<title>TJSANZEN CLOTHING</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -44,7 +44,7 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-card" id="myNavbar">
-            <a href="#home" class="w3-bar-item w3-button w3-wide">INSPYRE CLOTHING</a>
+            <a href="#home" class="w3-bar-item w3-button w3-wide">TJSANZEN CLOTHING</a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
                 <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
