--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="panel spotlight medium right" id="first">
                 <div class="content span-7">
                     <h2 class="major">Photography</h2>
-                    <p>I've been a hobby photographer since 2015, working on focusing my skills, and praying that I'll be able to use my talent for God. I've had my photographs featured in many places, including Facebook pages, Websites, books, in video games, and on Google Maps! I am available to do photoshoots, and have done engagement photos before! </p>
+                    <p>I've been a hobby photographer since 2015, working on focusing my skills and becoming better at what I love. You can find my work in many places, including Facebook pages, Websites, Books, Video games, and on some walls :) </p>
                 </div>
                 <div class="image filtered tinted" data-position="top left">
                     <img src="images/pic02.jpg" alt="" />
@@ -61,7 +61,7 @@
             <section class="panel spotlight large left">
                 <div class="content span-5">
                     <h2 class="major">Purveyor of Good News</h2>
-                    <p><strong>-PUR · VEY · OR -a person who purveys, provides, or supplies -  <br> </strong> I like to think of myself as a Purveyor of Good News. Because with as much bad news as there is in the world right now, there is still good news. And that good news has a name, and that name is Jesus Christ- the same Jesus who died on the cross, rose again, and promises eternal life to anyone who is willing to put their trust in him. And that's the news I spread- the good news of the Gospel.</p>
+                    <p><strong>-PUR · VEY · OR -a person who purveys, provides, or supplies -  <br> </strong> I like to think of myself as a Purveyor of Good News. Because with as much bad news as there is in the world right now, there is still good news. And that good news has a name, and that name is Jesus Christ- In fact, in 2018, I am working with Speed the Light to raise money and send the Good News to even more places! You can learn more about this adventure at <a href="stl/index.html">tjsanzen.net/stl</a>!</p>
                 </div>
                 <div class="image filtered tinted" data-position="top right">
                     <img src="images/pic03.jpg" alt="" />
@@ -90,7 +90,7 @@
             <section class="panel">
                 <div class="intro color2">
                     <h2 class="major">Portfolio</h2>
-                    <p>Here is a sample of some of my photography work! You can purchase select products at <a href="https://mipic.co/Tovin/" target="_blank">miPic.co/Tovin/.</a></p>
+                    <p>I have a few pictures that I'm pretty proud of :)</p>
                 </div>
                 <div class="gallery">
                     <div class="group span-3">
@@ -107,7 +107,7 @@
                     </div>
                     <a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
                     <a href="images/gallery/fulls/11.jpg" class="image filtered span-2-5" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
-                    <a href="https://www.mipic.co/image/LnUBI9lXyq6RG3KN/" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+                    <a href="images/gallery/fulls/10.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
                 </div>
             </section>
 
@@ -151,7 +151,7 @@
 
 
             <!-- Copyright -->
-            <div class="copyright">&copy; Tovin Sanzen 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+            <div class="copyright">&copy; Tovin Sanzen 2017-2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
         </div>
 
