--- a/stl/index.html
+++ b/stl/index.html
@@ -180,13 +180,13 @@
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>I'm a 15 year old (almost 16!) guy from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! It'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
+                <p>I'm a 16 year old guy from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! It'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
             </div>
         </div>
         <p class="w3-large w3-center w3-padding-16">My Goal for 2018:</p>
         <p class="w3-wide"><i class="fa fa-dollar"></i>1000</p>
         <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:35.626%">$356.26</div>
+            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:37.626%">$376.26</div>
         </div>
 
         <br>
