--- a/book/pricing.html
+++ b/book/pricing.html
@@ -20,7 +20,7 @@
                     <p class="w3-xlarge">Basic</p>
                 </li>
                 <li class="w3-padding-16"><b>30-Minute</b> Session</li>
-                <li class="w3-padding-16"><b>5</b> Photos</li>
+                <li class="w3-padding-16"><b>5+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>2 Day</b> Photos</li>
                 <li class="w3-padding-16">
@@ -39,7 +39,7 @@
                     <p class="w3-xlarge">Pro</p>
                 </li>
                 <li class="w3-padding-16"><b>1-hour</b> Session</li>
-                <li class="w3-padding-16"><b>10</b> Photos</li>
+                <li class="w3-padding-16"><b>10+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>3 Day</b> Photos</li>
                 <li class="w3-padding-16">
@@ -58,7 +58,7 @@
                     <p class="w3-xlarge">Event</p>
                 </li>
                 <li class="w3-padding-16"><b>4-hour</b> Session</li>
-                <li class="w3-padding-16"><b>20+</b> Photos</li>
+                <li class="w3-padding-16"><b>20+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>7 Day</b> Photos</li>
                 <li class="w3-padding-16">
@@ -77,7 +77,7 @@
                     <p class="w3-xlarge">Engagement</p>
                 </li>
                 <li class="w3-padding-16"><b>3-hour</b> Session</li>
-                <li class="w3-padding-16"><b>10+</b> Photos</li>
+                <li class="w3-padding-16"><b>10+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>7 Day</b> Photos</li>
                 <li class="w3-padding-16">
@@ -96,7 +96,7 @@
                     <p class="w3-xlarge">Wedding</p>
                 </li>
                 <li class="w3-padding-16"><b>Multi-day</b> Session</li>
-                <li class="w3-padding-16"><b>50+</b> Photos</li>
+                <li class="w3-padding-16"><b>50+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>21 Day</b> Photos</li>
                 <li class="w3-padding-16">
@@ -115,7 +115,7 @@
                     <p class="w3-xlarge">Senior</p>
                 </li>
                 <li class="w3-padding-16"><b>1-hour</b> Session</li>
-                <li class="w3-padding-16"><b>5</b> Photos</li>
+                <li class="w3-padding-16"><b>5</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>3 Day</b> Photos</li>
                 <li class="w3-padding-16">
