Added book link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <section class="panel">
                 <div class="intro color2">
                     <h2 class="major">Portfolio</h2>
-                    <p>I have a few pictures that I'm pretty proud of :)</p>
+                    <p>I have a few pictures that I'm pretty proud of :)<br>If you'd like to hire me, you can let me know by <a href="book/index.html">clicking here!</a></p>
                 </div>
                 <div class="gallery">
                     <div class="group span-3">
