--- a/camp/index.html
+++ b/camp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>Camp Packing List</title>
     <style>
         body {
             margin: 0;
