Added pilot to list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section class="panel banner right">
                 <div class="content color0 span-3-75">
                     <h1 class="major">Hello, my name<br /> is Tovin</h1>
-                    <p>I am a <strong>Photographer</strong>, as well as a <strong>Blogger</strong>, <strong>Web Designer</strong>, and a <strong>Purveyor of Good News</strong>.</p>
+                    <p>I am a <strong>Photographer</strong>, as well as a <strong>Blogger</strong>, <strong>Web Designer</strong>, <strong>Pilot (in-training)</strong>, and a <strong>Purveyor of Good News</strong>.</p>
                     <ul class="actions">
                         <li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
                     </ul>
@@ -105,7 +105,7 @@
                         <a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
                         <a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.JPG" alt="" /></a>
                     </div>
-                    <a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+                    <a href="images/gallery/fulls/09.jpg" class="image filtered span-3" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
                     <a href="images/gallery/fulls/11.jpg" class="image filtered span-2-5" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
                     <a href="images/gallery/fulls/10.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
                 </div>
