Fixed Form errors
Would reject every email given

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <input type="text" name="name" placeholder="Your Name">
                             <br>
                             <br>
-                            <input type="email" name="email" placeholder="Your email">
+                            <input type="text" name="contact" placeholder="Your email or phone">
                             <br>
                             <br>
                             <textarea name="message" placeholder="Your message"></textarea>
