--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <a href="images/gallery/fulls/09.jpg" class="image filtered span-3" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
                     <a href="images/gallery/fulls/11.jpg" class="image filtered span-2-5" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
-                    <a href="images/gallery/fulls/10.jpg" class="images filtered span-2-5" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+                    <a href="images/gallery/fulls/10.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
                 </div>
             </section>
 
