Updated booking page

--- a/book/index.html
+++ b/book/index.html
@@ -39,9 +39,9 @@
 
         <!-- Images (Portfolio) -->
         <img src="../images/gallery/fulls/06.jpg" alt="Couple" class="w3-image" width="1000" height="500">
-        <img src="../images/gallery/fulls/05.jpg" alt="Baby" class="w3-image w3-margin-top" width="1000" height="500">
+        <img src="../images/gallery/fulls/16.jpg" alt="Halo Suit" class="w3-image w3-margin-top" width="1000" height="500">
         <img src="../images/gallery/fulls/01.jpg" alt="Brock" class="w3-image w3-margin-top" width="1000" height="500">
-        <img src="../images/gallery/fulls/03.jpg" alt="Stars" class="w3-image w3-margin-top" width="1000" height="500">
+        <img src="../images/gallery/fulls/14.jpg" alt="Kids" class="w3-image w3-margin-top" width="1000" height="500">
         <img src="../images/gallery/fulls/13.jpg" alt="Bridge" class="w3-image w3-margin-top" width="1000" height="500">
 
         <!-- Contact -->
