--- a/book/pricing.html
+++ b/book/pricing.html
@@ -17,12 +17,12 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme">
-                    <p class="w3-xlarge">Basic</p>
+                    <p class="w3-xlarge">Portrait</p>
                 </li>
-                <li class="w3-padding-16"><b>30-Minute</b> Session</li>
+                <li class="w3-padding-16"><b>One</b> Person</li>
                 <li class="w3-padding-16"><b>2+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
-                <li class="w3-padding-16"><b>5 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>5 Day</b> Delivery</li>
                 <li class="w3-padding-16">
                     <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
                     <span class="w3-opacity">per session</span>
@@ -36,12 +36,12 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme-l2">
-                    <p class="w3-xlarge">Pro</p>
+                    <p class="w3-xlarge">Couple</p>
                 </li>
-                <li class="w3-padding-16"><b>1-hour</b> Session</li>
-                <li class="w3-padding-16"><b>5+</b> Digital Photos</li>
+                <li class="w3-padding-16"><b>Two</b> People</li>
+                <li class="w3-padding-16"><b>2+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
-                <li class="w3-padding-16"><b>3 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>5 Day</b> Delivery</li>
                 <li class="w3-padding-16">
                     <h2 class="w3-wide"><i class="fa fa-usd"></i> 100</h2>
                     <span class="w3-opacity">per session</span>
@@ -55,15 +55,15 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme">
-                    <p class="w3-xlarge">Event</p>
+                    <p class="w3-xlarge">Family</p>
                 </li>
-                <li class="w3-padding-16"><b>4-hour</b> Session</li>
-                <li class="w3-padding-16"><b>20+</b> Digital Photos</li>
-                <li class="w3-padding-16"><b>Multi</b> Site</li>
-                <li class="w3-padding-16"><b>7 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>2-15</b> People</li>
+                <li class="w3-padding-16"><b>5+</b> Digital Photos</li>
+                <li class="w3-padding-16"><b>Single</b> Site</li>
+                <li class="w3-padding-16"><b>10 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 300</h2>
-                    <span class="w3-opacity">per event</span>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 150+</h2>
+                    <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
                     <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
@@ -76,12 +76,12 @@
                 <li class="w3-theme-l2">
                     <p class="w3-xlarge">Engagement</p>
                 </li>
-                <li class="w3-padding-16"><b>3-hour</b> Session</li>
+                <li class="w3-padding-16"><b>2</b> People</li>
                 <li class="w3-padding-16"><b>10+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
-                <li class="w3-padding-16"><b>7 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>24 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 200</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 250</h2>
                     <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -93,15 +93,15 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme">
-                    <p class="w3-xlarge">Wedding</p>
+                    <p class="w3-xlarge">Event</p>
                 </li>
-                <li class="w3-padding-16"><b>Multi-day</b> Session</li>
-                <li class="w3-padding-16"><b>50+</b> Digital Photos</li>
+                <li class="w3-padding-16"><b>Unlimited</b> People</li>
+                <li class="w3-padding-16"><b>30+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
-                <li class="w3-padding-16"><b>21 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>1 Month</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 500</h2>
-                    <span class="w3-opacity">per wedding</span>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 300+</h2>
+                    <span class="w3-opacity">per event</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
                     <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
@@ -114,10 +114,10 @@
                 <li class="w3-theme-l2">
                     <p class="w3-xlarge">Senior</p>
                 </li>
-                <li class="w3-padding-16"><b>1-hour</b> Session</li>
+                <li class="w3-padding-16"><b>2</b> People</li>
                 <li class="w3-padding-16"><b>2+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
-                <li class="w3-padding-16"><b>3 Day</b> Photos</li>
+                <li class="w3-padding-16"><b>14 Day</b> Delivery</li>
                 <li class="w3-padding-16">
                     <h2 class="w3-wide"><i class="fa fa-usd"></i> 25</h2>
                     <span class="w3-opacity">per session (senior discount)</span>
