Fixed Choose Plan
Changed the selection options on the page that says "choose a plan" so now it works.

--- a/book/pricing.html
+++ b/book/pricing.html
@@ -154,11 +154,11 @@
                     <div class="w3-section">
                         <label>Plan</label>
                         <select name="cars" class="w3-input" name="plan" required>
-    <option value="basic">Basic</option>
-    <option value="pro">Pro</option>
-    <option value="event">Event</option>
+    <option value="portrait">Portrait</option>
+    <option value="couple">Couple</option>
+    <option value="family">Family</option>
     <option value="engagement">Engagement</option>
-                            <option value="wedding">Wedding</option>
+                            <option value="event">Event</option>
                             <option value="senior">Senior</option>
                             <option value="other">Other</option>
   </select>
