Fixed contact form errors

--- a/book/index.html
+++ b/book/index.html
@@ -50,7 +50,7 @@
             <hr>
             <p>If you'd like to book me for an event or a session, feel free to drop me a line, or head over to my pricing page!</p>
 
-            <form method="post" action="https://formspree.io/contact@tjsanzen.net" target="_blank">
+            <form method="post" action="https://formspree.io/contact@tjsanzen.net">
                 <div class="w3-section">
                     <label>Name</label>
                     <input class="w3-input w3-border" type="text" required name="Name">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="w3-section">
                     <label>Message</label>
-                    <input class="w3-input w3-border" required name="Message">
+                    <input class="w3-input w3-border" type="text" required name="Message">
                 </div>
                 <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
             </form><br>
