--- a/book/pricing.html
+++ b/book/pricing.html
@@ -142,28 +142,28 @@
                 <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> book@tjsanzen.net</p>
             </div>
             <div class="w3-col m7">
-                <form class="w3-container w3-card-4 w3-padding-16 w3-white" method="post" action="https://formspree.io/book@tjsanzen.net" target="_blank">
+                <form class="w3-container w3-card-4 w3-padding-16 w3-white" method="post" action="https://formspree.io/book@tjsanzen.net">
                     <div class="w3-section">
                         <label>Name</label>
                         <input class="w3-input" type="text" name="Name" required>
                     </div>
                     <div class="w3-section">
                         <label>Phone</label>
-                        <input class="w3-input" type="text" name="Email" required>
+                        <input class="w3-input" type="text" name="Phone" required>
                     </div>
                     <div class="w3-section">
                         <label>Plan</label>
                         <select name="cars" class="w3-input" name="plan" required>
-    <option value="portrait">Portrait</option>
-    <option value="couple">Couple</option>
-    <option value="family">Family</option>
-    <option value="engagement">Engagement</option>
+                            <option value="portrait">Portrait</option>
+                            <option value="couple">Couple</option>
+                            <option value="family">Family</option>
+                            <option value="engagement">Engagement</option>
                             <option value="event">Event</option>
                             <option value="senior">Senior</option>
                             <option value="other">Other</option>
   </select>
                     </div>
-                    <input class="w3-check" type="checkbox" checked name="Like">
+                    <input class="w3-check" type="checkbox" name="Like">
                     <label>I Like it!</label>
                     <button type="submit" class="w3-button w3-right w3-theme">Send</button>
                 </form>
