--- a/stl/index.html
+++ b/stl/index.html
@@ -180,7 +180,7 @@
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>I'm a 16 year old guy from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1000! It'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
+                <p>I'm a 16 year old guy from Minnesota, and this year I decided to try and shoot for the stars, with a goal of $1397.26! It'd be awesome if you'd be willing to help me reach that, and I'll be posting updates along the way! I expect to have some fun, sometimes funny, and possibly failed fundraising attempts, so follow along for these stories!</p>
             </div>
         </div>
         <p class="w3-large w3-center w3-padding-16">My Goal for 2018:</p>
@@ -235,7 +235,7 @@
                         <div class="w3-large w3-margin-bottom">
                             <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Frazee, MN<br>
                             <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 218.841.5586<br>
-                            <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: tjsanzen@mail.com<br>
+                            <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: hello@tjsanzen.net<br>
                         </div>
                         <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
                         <form method="POST" action="https://formspree.io/tjsanzen@gmail.com">
