--- a/stl/index.html
+++ b/stl/index.html
@@ -186,7 +186,7 @@
         <p class="w3-large w3-center w3-padding-16">My Goal for 2018:</p>
         <p class="w3-wide"><i class="fa fa-dollar"></i>1397.26</p>
         <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:28.41%">$397.26</div>
+            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:30.57%">$427.26</div>
         </div>
 
         <br>
@@ -329,7 +329,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
-            <!--      <script>
+            <script>
                 function openColorBox() {
                     $.colorbox({
                         iframe: true,
@@ -341,7 +341,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
                 setTimeout(openColorBox, 5000);
 
-            </script> -->
+            </script>
 
 </body>
 
