--- a/stl/popup.html
+++ b/stl/popup.html
@@ -34,7 +34,7 @@
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">Donate</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
-            <p class="w3-large w3-center">Donations are no longer being matched, but it's not too late to donate! Every time you donate, you give someone the chance to personally know Jesus.</p>
+            <p class="w3-large w3-center">To raise money for missions, I'm donating all profits from my photoshoots to Speed the Light! Schedule yours today, by clicking <a href="../book/index.html" target="_blank">here.</a></p>
         </div>
         <div class="w3-display-bottomleft w3-padding-large">
             Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
